Claude comments resolved.